--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ cmake_minimum_required (VERSION 3.0)
 
 project (OSAFork)
 
+set(CMAKE_CXX_STANDARD 17)
+
 # MSVC requires "/utf-8" for UTF-8 files without BOM
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
